Bug 1331340 - FileReader should not continue when allocation fails. r=bkelly, a=lizzard CLOSED TREE